bluec-tests/tests/invalid/types_bool/implicit_conversion_void1.c
int main(void) {
    _Bool b1 = (void)1;
    return 0;
}